OAK-10146: oak-search-elastic: similarity search does not work for some nodes (#873)
* OAK-10146: removed duplicate tests already part of oak-search common tests

* OAK-10146: workaround for https://github.com/elastic/elasticsearch/pull/94518

* OAK-10146: consolidate usage of java 9/10 immutable data structures